system/dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
  labels:
    argocd.argoproj.io/instance: dashboard
  name: dashboard-ingress
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: whoami.home.lednakirf.nl
      http:
        paths:
          - backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - dashboard.home.lednakirf.nl
      secretName: tls-whoami-ingress-http
